# django-girls-tutorial

./: .gitignore  README.md  noxfile.py  pyproject.toml
mysite/blog/: admin.py
mysite/blog/migrations/: 0001_initial.py
mysite/mysite/: settings.py
