[project]
name = "django-girls-tutorial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "Django>=5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "nox>=2024.4.15",
]
